# zerotier-one-gtk

./: .gitignore  AUTHORS.md  README.md  meson.build  org.github.paprikkafox.zerotier-one-gtk.json
data/: com.github.paprikkafox.zerotier-one-gtk.appdata.xml.in  com.github.paprikkafox.zerotier-one-gtk.desktop.in  com.github.paprikkafox.zerotier-one-gtk.gresource.xml  com.github.paprikkafox.zerotier-one-gtk.gschema.xml  meson.build  org.github.paprikkafox.zerotier-one-gtk.appdata.xml.in  org.github.paprikkafox.zerotier-one-gtk.desktop.in  org.github.paprikkafox.zerotier-one-gtk.gschema.xml
data/css/: style.css
debian/: changelog  control  copyright  rules
po/: POTFILES  com.github.paprikkafox.zerotier-one-gtk.pot  meson.build  ru_RU.po
src/: Application.vala  Main.vala  Window.vala  app.vala  meson.build  zerotieronegtk.gresource.xml
src/app-views/: meson.build  network-list-view.vala  welcome-view.vala  window.vala
src/app-views/components/: network-row.vala
src/cli-tools/: connect-to-network.vala  meson.build
src/configs/: Constants.vala  Properties.vala  Settings.vala
src/controllers/: AppController.vala
src/ui/: mainwindow.ui  window.ui
src/ui/components/: network-list.ui  network-row.ui
src/ui/views/: network-list-view.ui  welcome-view.ui
src/utils/: NetworkUtil.vala
src/views/: .goutputstream-YMNVK0  NetworksView.vala  SetupScreenView.vala  WelcomeView.vala  component-library.vala  mainwindow.vala  meson.build
src/widgets/: DialogAddNetwork.vala  DialogPreferences.vala  HeaderBar.vala  NetworkList.vala  NetworkRow.vala
