sources = files(
    'configs/Constants.vala',
    'configs/Properties.vala',
    'configs/Settings.vala',
    
    'controllers/AppController.vala',

    'utils/NetworkUtil.vala',

    'views/WelcomeView.vala',
    'views/NetworksView.vala',

    'widgets/DialogPreferences.vala',
    'widgets/DialogAddNetwork.vala',
    'widgets/HeaderBar.vala',
    'widgets/NetworkList.vala',
    'widgets/NetworkRow.vala',

    'Application.vala',
    'Main.vala',
    'Window.vala'
)