sources = files(
    'configs/Constants.vala',
    'configs/Properties.vala',
    'configs/Settings.vala',

    'utils/NetworkUtil.vala',

    'views/WelcomeView.vala',
    'views/NetworksView.vala',

    'widgets/DialogAddNetwork.vala',
    'widgets/HeaderBar.vala',
    'widgets/NetworkRow.vala',

    'Application.vala',
    'Main.vala',
    'Window.vala'
)